@@ -4,6 +4,8 @@ import static gov.cdc.usds.simplereport.api.Translators.CANADIAN_STATE_CODES;
 import static gov.cdc.usds.simplereport.api.Translators.COUNTRY_CODES;
 import static gov.cdc.usds.simplereport.api.Translators.PAST_DATE_FLEXIBLE_FORMATTER;
 import static gov.cdc.usds.simplereport.api.Translators.STATE_CODES;
+import static gov.cdc.usds.simplereport.utils.DateTimeUtils.TIMEZONE_SUFFIX_REGEX;
+import static gov.cdc.usds.simplereport.utils.DateTimeUtils.validTimeZoneIdMap;
 
 import com.fasterxml.jackson.databind.MappingIterator;
 import com.fasterxml.jackson.databind.RuntimeJsonMappingException;
@@ -18,6 +20,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
+import java.time.ZoneId;
 import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -36,14 +39,26 @@ public class CsvValidatorUtils {
   private static final String PHONE_NUMBER_REGEX = "^[1-9]\\d{2}-\\d{3}-\\d{4}$";
 
   // MM/DD/YYYY OR M/D/YYYY
-  private static final String DATE_REGEX = "^\\d{1,2}\\/\\d{1,2}\\/\\d{4}$";
+  // Month and day values of 0 or 00 are invalid, but format of 01 to 09 is still allowed.
+  // Months are limited to values between 1 and 12
+  // Days are limited to values between 1 and 31
+  private static final String DATE_REGEX =
+      "^(0{0,1}[1-9]|1[0-2])\\/(0{0,1}[1-9]|1\\d|2\\d|3[01])\\/\\d{4}$";
 
-  // MM/DD/YYYY HH:mm, MM/DD/YYYY H:mm, M/D/YYYY HH:mm OR M/D/YYYY H:mm
+  /**
+   * Validates MM/DD/YYYY HH:mm, MM/DD/YYYY H:mm, M/D/YYYY HH:mm OR M/D/YYYY H:mm
+   *
+   * <p>Optional timezone code suffix which is checked as a valid timezone separately
+   *
+   * @see gov.cdc.usds.simplereport.utils.DateTimeUtils
+   */
   private static final String DATE_TIME_REGEX =
-      "^\\d{1,2}\\/\\d{1,2}\\/\\d{4}( ([0-1]?[0-9]|2[0-3]):[0-5][0-9])?$";
+      "^(0{0,1}[1-9]|1[0-2])\\/(0{0,1}[1-9]|1\\d|2\\d|3[01])\\/\\d{4}( ([0-1]?[0-9]|2[0-3]):[0-5][0-9]( \\S+)?)?$";
+
   private static final String EMAIL_REGEX = "^[\\w-\\.]+@([\\w-]+\\.)+[\\w-]{2,4}$";
+  private static final String SNOMED_REGEX = "(^[0-9]{9}$)|(^[0-9]{15}$)";
   private static final String CLIA_REGEX = "^[A-Za-z0-9]{2}[Dd][A-Za-z0-9]{7}$";
-  private static final String ALPHABET_REGEX = "^[a-zA-Z]+$";
+  private static final String ALPHABET_REGEX = "^[a-zA-Z\\s]+$";
   private static final Set<String> VALID_STATE_CODES =
       Stream.concat(
               STATE_CODES.stream().map(String::toLowerCase),
@@ -52,13 +67,34 @@ public class CsvValidatorUtils {
   private static final Set<String> VALID_COUNTRY_CODES =
       COUNTRY_CODES.stream().map(String::toLowerCase).collect(Collectors.toSet());
   private static final String UNKNOWN_LITERAL = "unknown";
+  private static final String UNKNOWN_CODE = "unk";
   private static final String OTHER_LITERAL = "other";
   private static final String REFUSED_LITERAL = "refused";
   private static final String FEMALE_LITERAL = "female";
   private static final String MALE_LITERAL = "male";
+  private static final String NATIVE_LITERAL = "american indian or alaska native";
+  private static final String NATIVE_CODE = "1002-5";
+  private static final String NATIVE_DB_VALUE = "native";
   private static final String ASIAN_LITERAL = "asian";
+  private static final String ASIAN_CODE = "2028-9";
+  private static final String BLACK_LITERAL = "black or african american";
+  private static final String BLACK_CODE = "2054-5";
+  private static final String BLACK_DB_VALUE = "black";
+  private static final String PACIFIC_ISLANDER_LITERAL =
+      "native hawaiian or other pacific islander";
+  private static final String PACIFIC_ISLANDER_CODE = "2076-8";
+  private static final String PACIFIC_DB_VALUE = "pacific";
   private static final String WHITE_LITERAL = "white";
-
+  private static final String WHITE_CODE = "2106-3";
+  private static final String OTHER_RACE_CODE = "2131-1";
+  private static final String ASK_LITERAL = "ask, but unknown";
+  private static final String ASK_CODE = "asku";
+  private static final String HISPANIC_LITERAL = "hispanic or latino";
+  private static final String HISPANIC_CODE = "2135-2";
+  private static final String HISPANIC_DB_VALUE = "hispanic";
+  private static final String NOT_HISPANIC_LITERAL = "not hispanic or latino";
+  private static final String NOT_HISPANIC_CODE = "2186-5";
+  private static final String NOT_HISPANIC_DB_VALUE = "not_hispanic";
   private static final Set<String> GENDER_VALUES =
       Set.of(
           "m", MALE_LITERAL,
@@ -69,44 +105,35 @@ public class CsvValidatorUtils {
           "n", "not applicable");
   private static final Set<String> ETHNICITY_VALUES =
       Set.of(
-          "2135-2", "hispanic or latino",
-          "2186-5", "not hispanic or latino",
-          "unk", UNKNOWN_LITERAL);
+          HISPANIC_CODE, HISPANIC_LITERAL,
+          NOT_HISPANIC_CODE, NOT_HISPANIC_LITERAL,
+          UNKNOWN_CODE, UNKNOWN_LITERAL);
   private static final Set<String> RACE_VALUES =
       Set.of(
-          "1002-5",
-          "american indian or alaska native",
-          "2028-9",
+          NATIVE_CODE,
+          NATIVE_LITERAL,
+          ASIAN_CODE,
           ASIAN_LITERAL,
-          "2054-5",
-          "black or african american",
-          "2076-8",
-          "native hawaiian or other pacific islander",
-          "2106-3",
+          BLACK_CODE,
+          BLACK_LITERAL,
+          PACIFIC_ISLANDER_CODE,
+          PACIFIC_ISLANDER_LITERAL,
+          WHITE_CODE,
           WHITE_LITERAL,
-          "2131-1",
+          OTHER_RACE_CODE,
           OTHER_LITERAL,
-          "asku",
-          "ask but unknown",
-          "unk",
+          ASK_CODE,
+          ASK_LITERAL,
+          UNKNOWN_CODE,
           UNKNOWN_LITERAL);
   private static final Set<String> YES_NO_VALUES =
       Set.of(
           "y", "yes",
           "n", "no",
-          "u", "unk");
+          "u", UNKNOWN_CODE);
   private static final Set<String> TEST_RESULT_VALUES =
       Set.of("positive", "negative", "not detected", "detected", "invalid result");
-  private static final Set<String> SPECIMEN_TYPE_VALUES =
-      Set.of(
-          "nasal swab",
-          "nasopharyngeal swab",
-          "anterior nares swab",
-          "throat swab",
-          "oropharyngeal swab",
-          "whole blood",
-          "plasma",
-          "serum");
+
   private static final Set<String> RESIDENCE_VALUES =
       Set.of(
           "22232009", "hospital",
@@ -149,8 +176,44 @@ public class CsvValidatorUtils {
     return validateSpecificValueOrSNOMED(input, TEST_RESULT_VALUES);
   }
 
-  public static List<FeedbackMessage> validateSpecimenType(ValueOrError input) {
-    return validateSpecificValueOrSNOMED(input, SPECIMEN_TYPE_VALUES);
+  public static List<FeedbackMessage> validateSpecimenType(
+      ValueOrError input, Map<String, String> specimenNameSNOMEDMap) {
+    List<FeedbackMessage> errors = new ArrayList<>();
+    String value = parseString(input.getValue());
+
+    if (value == null) {
+      return errors;
+    }
+
+    boolean nonSNOMEDValue = value.matches(ALPHABET_REGEX);
+
+    if (nonSNOMEDValue) {
+      if (!specimenNameSNOMEDMap.containsKey(value.toLowerCase())) {
+        errors.add(
+            FeedbackMessage.builder()
+                .scope(ITEM_SCOPE)
+                .message(getInValidValueErrorMessage(input.getValue(), input.getHeader()))
+                .errorType(FeedbackMessage.ErrorType.INVALID_DATA)
+                .fieldRequired(true)
+                .fieldHeader(input.getHeader())
+                .build());
+      }
+
+      return errors;
+    }
+
+    if (!value.matches(SNOMED_REGEX)) {
+      errors.add(
+          FeedbackMessage.builder()
+              .scope(ITEM_SCOPE)
+              .message(getInValidValueErrorMessage(input.getValue(), input.getHeader()))
+              .errorType(FeedbackMessage.ErrorType.INVALID_DATA)
+              .fieldRequired(true)
+              .fieldHeader(input.getHeader())
+              .build());
+    }
+
+    return errors;
   }
 
   public static List<FeedbackMessage> validateResidence(ValueOrError input) {
@@ -215,8 +278,13 @@ public class CsvValidatorUtils {
       PAST_DATE_FLEXIBLE_FORMATTER.parse(input.getValue());
     } catch (DateTimeParseException e) {
       errors.add(
-          new FeedbackMessage(
-              ITEM_SCOPE, getInValidValueErrorMessage(input.getValue(), input.getHeader())));
+          FeedbackMessage.builder()
+              .scope(ITEM_SCOPE)
+              .fieldHeader(input.getHeader())
+              .message(getInValidValueErrorMessage(input.getValue(), input.getHeader()))
+              .errorType(FeedbackMessage.ErrorType.INVALID_DATA)
+              .fieldRequired(input.isRequired())
+              .build());
     }
     return errors;
   }
@@ -226,7 +294,31 @@ public class CsvValidatorUtils {
   }
 
   public static List<FeedbackMessage> validateDateTime(ValueOrError input) {
-    return validateRegex(input, DATE_TIME_REGEX);
+    List<FeedbackMessage> errors = new ArrayList<>(validateRegex(input, DATE_TIME_REGEX));
+    if (input.getValue() != null
+        && errors.isEmpty()
+        && input.getValue().matches(TIMEZONE_SUFFIX_REGEX)) {
+      errors.addAll(validateDateTimeZoneCode(input));
+    }
+    return errors;
+  }
+
+  public static List<FeedbackMessage> validateDateTimeZoneCode(ValueOrError input) {
+    List<FeedbackMessage> errors = new ArrayList<>();
+    String value = input.getValue();
+    String timezoneCode = value.substring(value.lastIndexOf(' ')).trim();
+    if (!ZoneId.getAvailableZoneIds().contains(timezoneCode)
+        && !validTimeZoneIdMap.containsKey(timezoneCode.toUpperCase())) {
+      errors.add(
+          FeedbackMessage.builder()
+              .scope(ITEM_SCOPE)
+              .fieldHeader(input.getHeader())
+              .message(getInValidValueErrorMessage(input.getValue(), input.getHeader()))
+              .errorType(FeedbackMessage.ErrorType.INVALID_DATA)
+              .fieldRequired(false)
+              .build());
+    }
+    return errors;
   }
 
   public static List<FeedbackMessage> validateEmail(ValueOrError input) {
@@ -246,10 +338,20 @@ public class CsvValidatorUtils {
 
   public static ValueOrError getValue(Map<String, String> row, String name, boolean isRequired) {
     String value = row.get(name);
-    if (isRequired && (value == null || value.trim().isEmpty())) {
-      return new ValueOrError(new FeedbackMessage(ITEM_SCOPE, getRequiredValueErrorMessage(name)));
+    if (value != null && !value.isBlank()) {
+      value = value.strip();
     }
-    return new ValueOrError(value, name);
+    if (isRequired && (value == null || value.isBlank())) {
+      return new ValueOrError(
+          FeedbackMessage.builder()
+              .scope(ITEM_SCOPE)
+              .fieldHeader(name)
+              .message(getRequiredValueErrorMessage(name))
+              .errorType(FeedbackMessage.ErrorType.MISSING_DATA)
+              .fieldRequired(true)
+              .build());
+    }
+    return new ValueOrError(value, name, isRequired);
   }
 
   public static List<FeedbackMessage> hasMissingRequiredHeaders(
@@ -262,10 +364,14 @@ public class CsvValidatorUtils {
             requiredField -> {
               if (!columns.contains(requiredField)) {
                 var feedback =
-                    new FeedbackMessage(
-                        CsvValidatorUtils.ITEM_SCOPE,
-                        "The header for column " + requiredField + " is missing or invalid.",
-                        null);
+                    FeedbackMessage.builder()
+                        .scope(CsvValidatorUtils.ITEM_SCOPE)
+                        .message(
+                            "The header for column " + requiredField + " is missing or invalid.")
+                        .fieldHeader(requiredField)
+                        .errorType(FeedbackMessage.ErrorType.MISSING_HEADER)
+                        .fieldRequired(true)
+                        .build();
                 errors.add(feedback);
               }
             });
@@ -292,10 +398,12 @@ public class CsvValidatorUtils {
   public static String convertEthnicityToDatabaseValue(String ethnicity) {
     Map<String, String> displayValueToDatabaseValue =
         Map.ofEntries(
-            Map.entry("hispanic or latino", "hispanic"),
-            Map.entry("not hispanic or latino", "not_hispanic"),
-            Map.entry("unk", UNKNOWN_LITERAL),
-            Map.entry(UNKNOWN_LITERAL, UNKNOWN_LITERAL));
+            Map.entry(HISPANIC_LITERAL, HISPANIC_DB_VALUE),
+            Map.entry(HISPANIC_CODE, HISPANIC_DB_VALUE),
+            Map.entry(NOT_HISPANIC_LITERAL, NOT_HISPANIC_DB_VALUE),
+            Map.entry(NOT_HISPANIC_CODE, NOT_HISPANIC_DB_VALUE),
+            Map.entry(UNKNOWN_CODE, REFUSED_LITERAL),
+            Map.entry(UNKNOWN_LITERAL, REFUSED_LITERAL));
 
     return displayValueToDatabaseValue.get(ethnicity.toLowerCase());
   }
@@ -303,14 +411,22 @@ public class CsvValidatorUtils {
   public static String convertRaceToDatabaseValue(String race) {
     Map<String, String> displayValueToDatabaseValue =
         Map.ofEntries(
-            Map.entry("american indian or alaska native", "native"),
+            Map.entry(NATIVE_LITERAL, NATIVE_DB_VALUE),
+            Map.entry(NATIVE_CODE, NATIVE_DB_VALUE),
             Map.entry(ASIAN_LITERAL, ASIAN_LITERAL),
-            Map.entry("black or african american", "black"),
-            Map.entry("native hawaiian or other pacific islander", "pacific"),
+            Map.entry(ASIAN_CODE, ASIAN_LITERAL),
+            Map.entry(BLACK_LITERAL, BLACK_DB_VALUE),
+            Map.entry(BLACK_CODE, BLACK_DB_VALUE),
+            Map.entry(PACIFIC_ISLANDER_LITERAL, PACIFIC_DB_VALUE),
+            Map.entry(PACIFIC_ISLANDER_CODE, PACIFIC_DB_VALUE),
             Map.entry(WHITE_LITERAL, WHITE_LITERAL),
+            Map.entry(WHITE_CODE, WHITE_LITERAL),
             Map.entry(OTHER_LITERAL, OTHER_LITERAL),
-            Map.entry("ask but unknown", REFUSED_LITERAL),
-            Map.entry(UNKNOWN_LITERAL, UNKNOWN_LITERAL));
+            Map.entry(OTHER_RACE_CODE, OTHER_LITERAL),
+            Map.entry(ASK_LITERAL, REFUSED_LITERAL),
+            Map.entry(ASK_CODE, REFUSED_LITERAL),
+            Map.entry(UNKNOWN_LITERAL, REFUSED_LITERAL),
+            Map.entry(UNKNOWN_CODE, REFUSED_LITERAL));
 
     return displayValueToDatabaseValue.get(race.toLowerCase());
   }
@@ -357,8 +473,13 @@ public class CsvValidatorUtils {
     }
     if (!value.matches(regex)) {
       errors.add(
-          new FeedbackMessage(
-              ITEM_SCOPE, getInValidValueErrorMessage(input.getValue(), input.getHeader())));
+          FeedbackMessage.builder()
+              .scope(ITEM_SCOPE)
+              .fieldHeader(input.getHeader())
+              .message(getInValidValueErrorMessage(input.getValue(), input.getHeader()))
+              .errorType(FeedbackMessage.ErrorType.INVALID_DATA)
+              .fieldRequired(input.isRequired())
+              .build());
     }
     return errors;
   }
@@ -372,8 +493,13 @@ public class CsvValidatorUtils {
     }
     if (!acceptableValues.contains(value.toLowerCase())) {
       errors.add(
-          new FeedbackMessage(
-              ITEM_SCOPE, getInValidValueErrorMessage(input.getValue(), input.getHeader())));
+          FeedbackMessage.builder()
+              .scope(ITEM_SCOPE)
+              .fieldHeader(input.getHeader())
+              .message(getInValidValueErrorMessage(input.getValue(), input.getHeader()))
+              .errorType(FeedbackMessage.ErrorType.INVALID_DATA)
+              .fieldRequired(input.isRequired())
+              .build());
     }
     return errors;
   }
@@ -387,24 +513,31 @@ public class CsvValidatorUtils {
 
   @Getter
   public static class ValueOrError {
-    public final List<FeedbackMessage> error;
-    public final String value;
-    public final String header;
+    private final List<FeedbackMessage> error;
+    private final String value;
+    private final String header;
+    private final boolean required;
 
-    public ValueOrError(String value, String header) {
+    public ValueOrError(String value, String header, boolean required) {
       this.value = value;
       this.error = Collections.emptyList();
       this.header = header;
+      this.required = required;
+    }
+
+    public ValueOrError(String value, String header) {
+      this(value, header, false);
     }
 
     public ValueOrError(FeedbackMessage error) {
       this.value = null;
       this.header = null;
       this.error = List.of(error);
+      this.required = error.isFieldRequired();
     }
 
     public List<FeedbackMessage> getPossibleError() {
-      return this.error;
+      return this.getError();
     }
   }
 }
