@@ -1,27 +1,5 @@
 package gov.cdc.usds.simplereport.api.converter;
 
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertEmailsToContactPoint;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToAOEObservations;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToAddress;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToAdministrativeGender;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToContactPoint;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToDate;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToDevice;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToDiagnosticReport;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToEthnicityExtension;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToHumanName;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToObservation;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToOrganization;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToPatient;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToPractitioner;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToRaceExtension;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToServiceRequest;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToSpecimen;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.convertToTribalAffiliationExtension;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.createFhirBundle;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.createMessageHeader;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.createPractitionerRole;
-import static gov.cdc.usds.simplereport.api.converter.FhirConverter.createProvenance;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.from;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
@@ -29,10 +7,12 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import ca.uhn.fhir.context.FhirContext;
+import ca.uhn.fhir.model.api.TemporalPrecisionEnum;
 import ca.uhn.fhir.parser.IParser;
 import gov.cdc.usds.simplereport.db.model.DeviceType;
 import gov.cdc.usds.simplereport.db.model.DeviceTypeDisease;
 import gov.cdc.usds.simplereport.db.model.Facility;
+import gov.cdc.usds.simplereport.db.model.FacilityBuilder;
 import gov.cdc.usds.simplereport.db.model.Organization;
 import gov.cdc.usds.simplereport.db.model.PatientAnswers;
 import gov.cdc.usds.simplereport.db.model.Person;
@@ -55,9 +35,9 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.time.LocalDate;
-import java.time.OffsetDateTime;
 import java.time.ZoneId;
-import java.time.format.DateTimeFormatter;
+import java.time.ZoneOffset;
+import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -66,6 +46,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.TimeZone;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -81,12 +62,14 @@ import org.hl7.fhir.r4.model.Device.DeviceNameType;
 import org.hl7.fhir.r4.model.DiagnosticReport;
 import org.hl7.fhir.r4.model.DiagnosticReport.DiagnosticReportStatus;
 import org.hl7.fhir.r4.model.Enumerations.AdministrativeGender;
+import org.hl7.fhir.r4.model.InstantType;
 import org.hl7.fhir.r4.model.Observation;
 import org.hl7.fhir.r4.model.Patient;
 import org.hl7.fhir.r4.model.Practitioner;
 import org.hl7.fhir.r4.model.PractitionerRole;
 import org.hl7.fhir.r4.model.PrimitiveType;
 import org.hl7.fhir.r4.model.Reference;
+import org.hl7.fhir.r4.model.ResourceType;
 import org.hl7.fhir.r4.model.ServiceRequest;
 import org.hl7.fhir.r4.model.ServiceRequest.ServiceRequestIntent;
 import org.hl7.fhir.r4.model.ServiceRequest.ServiceRequestStatus;
@@ -96,9 +79,11 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.skyscreamer.jsonassert.JSONAssert;
 import org.skyscreamer.jsonassert.JSONCompareMode;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.info.GitProperties;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.util.ReflectionTestUtils;
@@ -111,11 +96,13 @@ class FhirConverterTest {
   private static final String tribalSystemUrl =
       "http://terminology.hl7.org/CodeSystem/v3-TribalEntityUS";
   public static final String snomedCode = "http://snomed.info/sct";
+  public static final ZoneId DEFAULT_TIME_ZONE_ID = ZoneId.of("US/Eastern");
   final FhirContext ctx = FhirContext.forR4();
   final IParser parser = ctx.newJsonParser();
 
   private static final Instant instant = (new Date(1675891986000L)).toInstant();
   private static GitProperties gitProperties;
+  @Autowired private FhirConverter fhirConverter;
 
   @BeforeAll
   public static void init() {
@@ -126,7 +113,7 @@ class FhirConverterTest {
 
   @Test
   void convertToHumanName_String_allFields() {
-    var actual = convertToHumanName("first", "middle", "last", "jr");
+    var actual = fhirConverter.convertToHumanName("first", "middle", "last", "jr");
     assertThat(actual.getGiven().stream().map(PrimitiveType::getValue))
         .containsExactly("first", "middle");
     assertThat(actual.getFamily()).isEqualTo("last");
@@ -135,14 +122,14 @@ class FhirConverterTest {
 
   @Test
   void convertToHumanName_Strings_nullMiddleName() {
-    var actual = convertToHumanName("first", null, "last", "jr");
+    var actual = fhirConverter.convertToHumanName("first", null, "last", "jr");
 
     assertThat(actual.getGiven().stream().map(PrimitiveType::getValue)).containsExactly("first");
   }
 
   @Test
   void convertToHumanName_Strings_null() {
-    var actual = convertToHumanName(null, null, null, null);
+    var actual = fhirConverter.convertToHumanName(null, null, null, null);
 
     assertThat(actual.getGiven()).isEmpty();
     assertThat(actual.getFamily()).isNull();
@@ -155,7 +142,7 @@ class FhirConverterTest {
     var phoneNumber2 = new PhoneNumber(PhoneType.LANDLINE, "2485551233");
 
     var actual =
-        FhirConverter.convertPhoneNumbersToContactPoint(List.of(phoneNumber, phoneNumber2));
+        fhirConverter.convertPhoneNumbersToContactPoint(List.of(phoneNumber, phoneNumber2));
     assertThat(actual).hasSize(2);
 
     assertThat(actual.stream().map(ContactPoint::getValue))
@@ -166,7 +153,7 @@ class FhirConverterTest {
   void convertToContactPoint_PhoneNumber_validLandline() {
     var phoneNumber = new PhoneNumber(PhoneType.LANDLINE, "2485551234");
 
-    var actual = convertToContactPoint(phoneNumber);
+    var actual = fhirConverter.convertToContactPoint(phoneNumber);
 
     assertThat(actual.getSystem()).isEqualTo(ContactPointSystem.PHONE);
     assertThat(actual.getUse().toCode()).isEqualTo(ContactPointUse.HOME.toCode());
@@ -175,7 +162,8 @@ class FhirConverterTest {
 
   @Test
   void convertToContactPoint_PhoneNumber_validMobile() {
-    var actual = convertToContactPoint(ContactPoint.ContactPointUse.MOBILE, "2485551234");
+    var actual =
+        fhirConverter.convertToContactPoint(ContactPoint.ContactPointUse.MOBILE, "2485551234");
 
     assertThat(actual.getSystem()).isEqualTo(ContactPointSystem.PHONE);
     assertThat(actual.getUse().toCode()).isEqualTo(ContactPointUse.MOBILE.toCode());
@@ -184,7 +172,7 @@ class FhirConverterTest {
 
   @Test
   void convertToContactPoint_ContactPointAndString_invalidNumber() {
-    var actual = convertToContactPoint(ContactPoint.ContactPointUse.HOME, "+0333");
+    var actual = fhirConverter.convertToContactPoint(ContactPoint.ContactPointUse.HOME, "+0333");
 
     assertThat(actual)
         .returns(ContactPointSystem.PHONE, from(ContactPoint::getSystem))
@@ -197,7 +185,7 @@ class FhirConverterTest {
   @Test
   void convertEmailsToContactPoint_valid() {
     var actual =
-        convertEmailsToContactPoint(
+        fhirConverter.convertEmailsToContactPoint(
             ContactPointUse.HOME, List.of("email1@example.com", "email2@example.com"));
 
     assertThat(actual).hasSize(2);
@@ -214,7 +202,7 @@ class FhirConverterTest {
   @Test
   void convertEmailToContactPoint_valid() {
     var actual =
-        FhirConverter.convertEmailToContactPoint(ContactPointUse.WORK, "example@example.com");
+        fhirConverter.convertEmailToContactPoint(ContactPointUse.WORK, "example@example.com");
     assertThat(actual.getSystem()).isEqualTo(ContactPointSystem.EMAIL);
     assertThat(actual.getValue()).isEqualTo("example@example.com");
     assertThat(actual.getUse()).isEqualTo(ContactPointUse.WORK);
@@ -222,7 +210,8 @@ class FhirConverterTest {
 
   @Test
   void convertToContactPoint_CodePointUseAndCodePointSystemAndString_valid() {
-    var actual = convertToContactPoint(null, ContactPointSystem.EMAIL, "example@example.com");
+    var actual =
+        fhirConverter.convertToContactPoint(null, ContactPointSystem.EMAIL, "example@example.com");
     assertThat(actual.getUse()).isNull();
     assertThat(actual.getSystem()).isEqualTo(ContactPointSystem.EMAIL);
     assertThat(actual.getValue()).isEqualTo("example@example.com");
@@ -231,7 +220,7 @@ class FhirConverterTest {
   @ParameterizedTest
   @MethodSource("genderArgs")
   void convertToAdministrativeGender_matches(String personGender, AdministrativeGender expected) {
-    var actual = convertToAdministrativeGender(personGender);
+    var actual = fhirConverter.convertToAdministrativeGender(personGender);
 
     assertThat(actual).isEqualTo(expected);
   }
@@ -250,7 +239,7 @@ class FhirConverterTest {
     var address =
         new StreetAddress(
             List.of("1234 Main", "Apartment #1"), "MyCity", "MyCounty", "PA", "15025");
-    var actual = convertToAddress(address, "USA");
+    var actual = fhirConverter.convertToAddress(address, "USA");
     assertThat(actual.getLine().stream().map(PrimitiveType::getValue))
         .containsExactly("1234 Main", "Apartment #1");
     assertThat(actual.getCity()).isEqualTo(address.getCity());
@@ -262,7 +251,7 @@ class FhirConverterTest {
   @Test
   void convertToAddress_Strings_valid() {
     var actual =
-        convertToAddress(
+        fhirConverter.convertToAddress(
             List.of("1234 Main", "Apartment #1"), "MyCity", "MyCounty", "PA", "15025", "Canada");
     assertThat(actual.getLine().stream().map(PrimitiveType::getValue))
         .containsExactly("1234 Main", "Apartment #1");
@@ -274,7 +263,7 @@ class FhirConverterTest {
 
   @Test
   void convertToAddress_Strings_null() {
-    var actual = convertToAddress(null, null, null, null, null, null);
+    var actual = fhirConverter.convertToAddress(null, null, null, null, null, null);
     assertThat(actual.getLine()).isEmpty();
     assertThat(actual.getCity()).isNull();
     assertThat(actual.getDistrict()).isNull();
@@ -284,7 +273,7 @@ class FhirConverterTest {
 
   @Test
   void convertToDate_valid() {
-    var actual = convertToDate(LocalDate.of(2022, 12, 13));
+    var actual = fhirConverter.convertToDate(LocalDate.of(2022, 12, 13));
 
     assertThat(actual).isEqualToIgnoringHours(new Date(1670936400000L));
   }
@@ -293,7 +282,7 @@ class FhirConverterTest {
   @MethodSource("raceArgs")
   void convertToRaceArgs_matches(
       String personRaceValue, String codeSystem, String expectedCode, String expectedText) {
-    var actual = convertToRaceExtension(personRaceValue);
+    var actual = fhirConverter.convertToRaceExtension(personRaceValue);
     var codeableConcept = actual.castToCodeableConcept(actual.getValue());
     var code = codeableConcept.getCoding();
 
@@ -315,7 +304,7 @@ class FhirConverterTest {
   void convertToEthnicityExtension_matches(
       String ethnicity, String system, String ethnicityCode, String ethnicityDisplay) {
 
-    var actual = convertToEthnicityExtension(ethnicity);
+    var actual = fhirConverter.convertToEthnicityExtension(ethnicity);
     assert actual != null;
     var codeableConcept = actual.castToCodeableConcept(actual.getValue());
     var coding = codeableConcept.getCoding();
@@ -332,19 +321,19 @@ class FhirConverterTest {
     return Stream.of(
         arguments("hispanic", ethnicitySystem, "H", "Hispanic or Latino"),
         arguments("not_hispanic", ethnicitySystem, "N", "Not Hispanic or Latino"),
-        arguments("refused", unknownSystem, "U", "unknown"),
-        arguments("shark", unknownSystem, "U", "unknown"));
+        arguments("refused", ethnicitySystem, "U", "unknown"),
+        arguments("shark", ethnicitySystem, "U", "unknown"));
   }
 
   @Test
   void convertToEthnicityExtension_String_returnsNullIfEmpty() {
-    var actual = convertToEthnicityExtension(null);
+    var actual = fhirConverter.convertToEthnicityExtension(null);
     assertThat(actual).isNull();
   }
 
   @Test
   void convertToTribalAffiliation_String() {
-    var actual = convertToTribalAffiliationExtension("1").get();
+    var actual = fhirConverter.convertToTribalAffiliationExtension("1").get();
     var tribalAffiliationExtension = actual.getExtensionByUrl("tribalAffiliation");
     var tribalCodeableConcept = actual.castToCodeableConcept(tribalAffiliationExtension.getValue());
     var tribalCoding = tribalCodeableConcept.getCoding().get(0);
@@ -358,7 +347,7 @@ class FhirConverterTest {
 
   @Test
   void convertToTribalAffiliation_List_empty() {
-    var actual = convertToTribalAffiliationExtension(Collections.emptyList());
+    var actual = fhirConverter.convertToTribalAffiliationExtension(Collections.emptyList());
     assertThat(actual).isEmpty();
   }
 
@@ -366,28 +355,33 @@ class FhirConverterTest {
   void convertToTribalAffiliation_List_nullElement() {
     var list = new ArrayList<String>();
     list.add(null);
-    var actual = convertToTribalAffiliationExtension(list);
+    var actual = fhirConverter.convertToTribalAffiliationExtension(list);
     assertThat(actual).isEmpty();
   }
 
-  @Test
-  void convertToPractitioner_Provider_matchesJson() throws IOException {
+  @ParameterizedTest
+  @CsvSource({
+    ",fhir/practitioner.json",
+    "1588029771, fhir/practitionerNPI.json",
+    "0000001009, fhir/practitioner.json",
+    "\"\", fhir/practitioner.json",
+  })
+  void convertToPractitioner_Provider_matchesJson(String npi, String jsonPath) throws IOException {
     var internalId = "3c9c7370-e2e3-49ad-bb7a-f6005f41cf29";
     var provider =
         new Provider(
             new PersonName("Amelia", "Mary", "Earhart", null),
-            null,
+            npi,
             new StreetAddress(List.of("223 N Terrace St"), "Atchison", "KS", "66002", null),
             "248 555 1234");
     ReflectionTestUtils.setField(provider, "internalId", UUID.fromString(internalId));
 
-    var actual = convertToPractitioner(provider);
+    var actual = fhirConverter.convertToPractitioner(provider);
 
     String actualSerialized = parser.encodeResourceToString(actual);
     var expectedSerialized =
         IOUtils.toString(
-            Objects.requireNonNull(
-                getClass().getClassLoader().getResourceAsStream("fhir/practitioner.json")),
+            Objects.requireNonNull(getClass().getClassLoader().getResourceAsStream(jsonPath)),
             StandardCharsets.UTF_8);
     JSONAssert.assertEquals(expectedSerialized, actualSerialized, true);
   }
@@ -397,17 +391,20 @@ class FhirConverterTest {
     var internalId = "3c9c7370-e2e3-49ad-bb7a-f6005f41cf29";
     var facility =
         new Facility(
-            null,
-            "Elron",
-            "123D456789",
-            new StreetAddress(List.of("12 Main Street", "Unit 4"), "Lakewood", "FL", "21037", null),
-            "248 555 1234",
-            "email@example.com",
-            null,
-            Collections.emptyList());
+            FacilityBuilder.builder()
+                .facilityName("Elron")
+                .cliaNumber("123D456789")
+                .facilityAddress(
+                    new StreetAddress(
+                        List.of("12 Main Street", "Unit 4"), "Lakewood", "FL", "21037", null))
+                .phone("248 555 1234")
+                .email("email@example.com")
+                .configuredDevices(Collections.emptyList())
+                .build());
+
     ReflectionTestUtils.setField(facility, "internalId", UUID.fromString(internalId));
 
-    var actual = convertToOrganization(facility);
+    var actual = fhirConverter.convertToOrganization(facility);
 
     String actualSerialized = parser.encodeResourceToString(actual);
     var expectedSerialized =
@@ -453,7 +450,7 @@ class FhirConverterTest {
             new PhoneNumber(PhoneType.LANDLINE, "3045551233")));
     ReflectionTestUtils.setField(person, "internalId", UUID.fromString(internalId));
 
-    var actual = convertToPatient(person);
+    var actual = fhirConverter.convertToPatient(person);
 
     String actualSerialized = parser.encodeResourceToString(actual);
     var expectedSerialized =
@@ -467,7 +464,7 @@ class FhirConverterTest {
   @Test
   void convertToDevice_Strings_valid() {
     var actual =
-        convertToDevice(
+        fhirConverter.convertToDevice(
             "PHASE Scientific International, Ltd.\n",
             "INDICAID COVID-19 Rapid Antigen Test*",
             "id-123");
@@ -483,10 +480,10 @@ class FhirConverterTest {
   @Test
   void convertToDevice_DeviceType_valid() {
     var internalId = UUID.randomUUID();
-    var deviceType = new DeviceType("name", "manufacturer", "model", "loinc", "swab type", 15);
+    var deviceType = new DeviceType("name", "manufacturer", "model", 15);
     ReflectionTestUtils.setField(deviceType, "internalId", internalId);
 
-    var actual = convertToDevice(deviceType);
+    var actual = fhirConverter.convertToDevice(deviceType);
 
     assertThat(actual.getId()).isEqualTo(internalId.toString());
     assertThat(actual.getManufacturer()).isEqualTo("manufacturer");
@@ -500,15 +497,10 @@ class FhirConverterTest {
     var internalId = "3c9c7370-e2e3-49ad-bb7a-f6005f41cf29";
     DeviceType deviceType =
         new DeviceType(
-            "name",
-            "BioFire Diagnostics",
-            "BioFire Respiratory Panel 2.1 (RP2.1)*@",
-            "loinc",
-            "swab type",
-            15);
+            "name", "BioFire Diagnostics", "BioFire Respiratory Panel 2.1 (RP2.1)*@", 15);
     ReflectionTestUtils.setField(deviceType, "internalId", UUID.fromString(internalId));
 
-    var actual = convertToDevice(deviceType);
+    var actual = fhirConverter.convertToDevice(deviceType);
 
     String actualSerialized = parser.encodeResourceToString(actual);
     var expectedSerialized =
@@ -521,15 +513,25 @@ class FhirConverterTest {
 
   @Test
   void convertToSpecimen_Strings_valid() {
+    var collectionDate =
+        ZonedDateTime.ofInstant(Instant.parse("2023-06-22T16:38:00.000Z"), DEFAULT_TIME_ZONE_ID);
+    var receivedTime = ZonedDateTime.of(2023, 6, 23, 12, 0, 0, 0, ZoneId.of("US/Eastern"));
+
     var actual =
-        convertToSpecimen(
-            "258500001",
-            "Nasopharyngeal swab",
-            "53342003",
-            "Internal nose structure (body structure)",
-            "id-123");
+        fhirConverter.convertToSpecimen(
+            ConvertToSpecimenProps.builder()
+                .specimenCode("258500001")
+                .specimenName("Nasopharyngeal swab")
+                .collectionCode("53342003")
+                .collectionName("Internal nose structure (body structure)")
+                .id("id-123")
+                .identifier("uuid-123")
+                .collectionDate(collectionDate)
+                .receivedTime(receivedTime)
+                .build());
 
     assertThat(actual.getId()).isEqualTo("id-123");
+    assertThat(actual.getIdentifierFirstRep().getValue()).isEqualTo("uuid-123");
     assertThat(actual.getType().getCoding()).hasSize(1);
     assertThat(actual.getType().getCodingFirstRep().getSystem()).isEqualTo(snomedCode);
     assertThat(actual.getType().getCodingFirstRep().getCode()).isEqualTo("258500001");
@@ -542,17 +544,21 @@ class FhirConverterTest {
         .isEqualTo("53342003");
     assertThat(actual.getCollection().getBodySite().getText())
         .isEqualTo("Internal nose structure (body structure)");
+    assertThat(((DateTimeType) actual.getCollection().getCollected()).getValue())
+        .isEqualTo("2023-06-22T16:38:00Z");
   }
 
   @Test
   void convertToSpecimen_Strings_null() {
-    var actual = convertToSpecimen(null, null, null, null, null);
+    var actual = fhirConverter.convertToSpecimen(ConvertToSpecimenProps.builder().build());
 
     assertThat(actual.getId()).isNull();
     assertThat(actual.getType().getText()).isNull();
     assertThat(actual.getType().getCoding()).isEmpty();
     assertThat(actual.getCollection().getBodySite().getText()).isNull();
     assertThat(actual.getCollection().getBodySite().getCoding()).isEmpty();
+    assertThat(actual.getCollection().getCollected()).isNull();
+    assertThat(actual.getReceivedTime()).isNull();
   }
 
   @Test
@@ -566,7 +572,13 @@ class FhirConverterTest {
     var internalId = UUID.randomUUID();
     ReflectionTestUtils.setField(specimenType, "internalId", internalId);
 
-    var actual = convertToSpecimen(specimenType);
+    var collectionDate =
+        ZonedDateTime.ofInstant(Instant.parse("2023-06-22T13:16:00.000Z"), DEFAULT_TIME_ZONE_ID);
+    var receivedTime = ZonedDateTime.of(2023, 6, 23, 12, 0, 0, 0, ZoneId.of("US/Eastern"));
+
+    var actual =
+        fhirConverter.convertToSpecimen(
+            specimenType, UUID.randomUUID(), collectionDate, receivedTime);
 
     assertThat(actual.getId()).isEqualTo(internalId.toString());
     assertThat(actual.getType().getCoding()).hasSize(1);
@@ -581,6 +593,10 @@ class FhirConverterTest {
         .isEqualTo("53342003");
     assertThat(actual.getCollection().getBodySite().getText())
         .isEqualTo("Internal nose structure (body structure)");
+    assertThat(((DateTimeType) actual.getCollection().getCollected()).getValue())
+        .isEqualTo("2023-06-22T13:16:00.00Z");
+    assertThat(actual.getReceivedTimeElement().getValueAsString())
+        .isEqualTo("2023-06-23T12:00:00-04:00");
   }
 
   @Test
@@ -589,7 +605,13 @@ class FhirConverterTest {
     SpecimenType specimenType = new SpecimenType("nasal", "40001", "nose", "10101");
     ReflectionTestUtils.setField(specimenType, "internalId", UUID.fromString(internalId));
 
-    var actual = convertToSpecimen(specimenType);
+    var actual =
+        fhirConverter.convertToSpecimen(
+            specimenType,
+            UUID.randomUUID(),
+            ZonedDateTime.ofInstant(
+                Instant.parse("2023-06-22T15:35:00.000Z"), DEFAULT_TIME_ZONE_ID),
+            ZonedDateTime.of(2023, 6, 23, 12, 0, 0, 0, ZoneId.of("US/Eastern")));
 
     String actualSerialized = parser.encodeResourceToString(actual);
     var expectedSerialized =
@@ -597,22 +619,30 @@ class FhirConverterTest {
             Objects.requireNonNull(
                 getClass().getClassLoader().getResourceAsStream("fhir/specimen.json")),
             StandardCharsets.UTF_8);
+    expectedSerialized =
+        expectedSerialized.replace(
+            "$SPECIMEN_IDENTIFIER", actual.getIdentifierFirstRep().getValue());
     JSONAssert.assertEquals(expectedSerialized, actualSerialized, true);
   }
 
   @Test
   void convertToObservation_Strings_valid() {
+
     var actual =
-        convertToObservation(
-            "diseaseCode",
-            "diseaseName",
-            "resultCode",
-            TestCorrectionStatus.ORIGINAL,
-            null,
-            "id-123",
-            TestResult.POSITIVE.toString(),
-            "testKitName",
-            "equipmentUid");
+        fhirConverter.convertToObservation(
+            ConvertToObservationProps.builder()
+                .diseaseCode("diseaseCode")
+                .diseaseName("diseaseName")
+                .resultCode("resultCode")
+                .correctionStatus(TestCorrectionStatus.ORIGINAL)
+                .correctionReason(null)
+                .id("id-123")
+                .resultDescription(TestResult.POSITIVE.toString())
+                .testkitNameId("testKitName")
+                .equipmentUid("equipmentUid")
+                .deviceModel("modelName")
+                .issued(Date.from(Instant.parse("2023-06-10T23:15:00.00Z")))
+                .build());
 
     assertThat(actual.getId()).isEqualTo("id-123");
     assertThat(actual.getStatus().getDisplay()).isEqualTo(ObservationStatus.FINAL.getDisplay());
@@ -627,18 +657,27 @@ class FhirConverterTest {
     assertThat(actual.getValueCodeableConcept().getCodingFirstRep().getCode())
         .isEqualTo("resultCode");
     assertThat(actual.getNote()).isEmpty();
+    assertThat(actual.getMethod().getCodingFirstRep().getDisplay()).isEqualTo("modelName");
+    assertThat(actual.getIssued()).isEqualTo("2023-06-10T23:15:00.00Z");
   }
 
   @Test
   void convertToObservation_Result_valid() {
-    var result =
-        new Result(null, null, new SupportedDisease("covid-19", "96741-4"), TestResult.POSITIVE);
+    Result result = new Result(new SupportedDisease("covid-19", "96741-4"), TestResult.POSITIVE);
+
     var internalId = UUID.randomUUID();
     ReflectionTestUtils.setField(result, "internalId", internalId);
 
     var actual =
-        convertToObservation(
-            result, "loinc", TestCorrectionStatus.ORIGINAL, null, "testkitName", "equipmentUid");
+        fhirConverter.convertToObservation(
+            result,
+            "loinc",
+            TestCorrectionStatus.ORIGINAL,
+            null,
+            "testkitName",
+            "equipmentUid",
+            "modelName",
+            Date.from(Instant.parse("2023-06-10T23:15:00.00Z")));
 
     assertThat(actual.getId()).isEqualTo(internalId.toString());
     assertThat(actual.getStatus().getDisplay()).isEqualTo(ObservationStatus.FINAL.getDisplay());
@@ -652,23 +691,27 @@ class FhirConverterTest {
     assertThat(actual.getValueCodeableConcept().getCodingFirstRep().getCode())
         .isEqualTo("260373001");
     assertThat(actual.getNote()).isEmpty();
+    assertThat(actual.getMethod().getCodingFirstRep().getDisplay()).isEqualTo("modelName");
+    assertThat(actual.getIssued()).isEqualTo("2023-06-10T23:15:00.00Z");
   }
 
   @Test
   void convertToObservation_Result_correction() {
-    var result =
-        new Result(null, null, new SupportedDisease("covid-19", "96741-4"), TestResult.POSITIVE);
+    Result result = new Result(new SupportedDisease("covid-19", "96741-4"), TestResult.POSITIVE);
+
     var internalId = UUID.randomUUID();
     ReflectionTestUtils.setField(result, "internalId", internalId);
 
     var actual =
-        convertToObservation(
+        fhirConverter.convertToObservation(
             result,
             "loinc",
             TestCorrectionStatus.CORRECTED,
             "Oopsy Daisy",
             "testkitName",
-            "equipmentUid");
+            "equipmentUid",
+            "modelName",
+            new Date());
 
     assertThat(actual.getId()).isEqualTo(internalId.toString());
     assertThat(actual.getStatus().getDisplay()).isEqualTo(ObservationStatus.CORRECTED.getDisplay());
@@ -678,14 +721,21 @@ class FhirConverterTest {
 
   @Test
   void convertToObservation_Result_removeWithoutReason() {
-    var result =
-        new Result(null, null, new SupportedDisease("covid-19", "96741-4"), TestResult.POSITIVE);
+    Result result = new Result(new SupportedDisease("covid-19", "96741-4"), TestResult.POSITIVE);
+
     var internalId = UUID.randomUUID();
     ReflectionTestUtils.setField(result, "internalId", internalId);
 
     var actual =
-        convertToObservation(
-            result, "loinc", TestCorrectionStatus.REMOVED, null, "testkitName", "equipmentUid");
+        fhirConverter.convertToObservation(
+            result,
+            "loinc",
+            TestCorrectionStatus.REMOVED,
+            null,
+            "testkitName",
+            "equipmentUid",
+            "modelName",
+            new Date());
 
     assertThat(actual.getId()).isEqualTo(internalId.toString());
     assertThat(actual.getStatus().getDisplay())
@@ -697,40 +747,35 @@ class FhirConverterTest {
   @Test
   void convertToObservation_Result_null() {
     var actual =
-        convertToObservation(
-            null, "", TestCorrectionStatus.ORIGINAL, null, "testkitName", "equipmentUid");
+        fhirConverter.convertToObservation(
+            null,
+            "",
+            TestCorrectionStatus.ORIGINAL,
+            null,
+            "testkitName",
+            "equipmentUid",
+            "modelName",
+            new Date());
 
     assertThat(actual).isNull();
   }
 
   @Test
   void convertToObservation_Result_nullDisease() {
+    Result result = new Result(null, TestResult.POSITIVE);
+
     var actual =
-        convertToObservation(
-            new Result(null, null, null, TestResult.POSITIVE),
+        fhirConverter.convertToObservation(
+            result,
             "",
             TestCorrectionStatus.ORIGINAL,
             null,
             "testkitName",
-            "equipmentUid");
+            "equipmentUid",
+            "modelName",
+            new Date());
 
     assertThat(actual).isNull();
-  }
-
-  @Test
-  void convertToObservation_Result_defaultsToDeviceLoinc() {
-    var covidId = "3c9c7370-e2e3-49ad-bb7a-f6005f41cf29";
-    var testOrder = TestDataBuilder.createTestOrderWithDevice();
-    var covidResult =
-        new Result(testOrder, new SupportedDisease("COVID-19", "96741-4"), TestResult.POSITIVE);
-    ReflectionTestUtils.setField(covidResult, "internalId", UUID.fromString(covidId));
-
-    var actual =
-        convertToObservation(
-            Set.of(covidResult), Collections.emptyList(), TestCorrectionStatus.ORIGINAL, null);
-
-    assertThat(actual).hasSize(1);
-    assertThat(actual.get(0).getCode().getCodingFirstRep().getCode()).isEqualTo("54321-BOOM");
   }
 
   @Test
@@ -740,23 +785,31 @@ class FhirConverterTest {
     var covidDisease = new SupportedDisease("COVID-19", "96741-4");
     var fluDisease = new SupportedDisease("FLU A", "LP14239-5");
     var testOrder = TestDataBuilder.createTestOrderWithDevice();
-    var covidResult = new Result(testOrder, covidDisease, TestResult.POSITIVE);
-    var fluResult = new Result(testOrder, fluDisease, TestResult.NEGATIVE);
+    var covidResult =
+        TestDataBuilder.createTestResult(testOrder, covidDisease, TestResult.POSITIVE);
+    var fluResult = TestDataBuilder.createTestResult(testOrder, fluDisease, TestResult.NEGATIVE);
     ReflectionTestUtils.setField(covidResult, "internalId", UUID.fromString(covidId));
     ReflectionTestUtils.setField(fluResult, "internalId", UUID.fromString(fluId));
+    var device = DeviceType.builder().build();
     var covidDiseaseTestPerformedCode =
         new DeviceTypeDisease(
             null, covidDisease, "94500-6", "covidEquipmentUID", "covidTestkitNameId", "94500-0");
     var fluDiseaseTestPerformedCode =
         new DeviceTypeDisease(
             null, fluDisease, "85477-8", "fluEquipmentUID", "fluTestkitNameId", "85477-0");
+    ReflectionTestUtils.setField(
+        device,
+        "supportedDiseaseTestPerformed",
+        List.of(covidDiseaseTestPerformedCode, fluDiseaseTestPerformedCode));
+    ReflectionTestUtils.setField(device, "model", "deviceModel");
 
     var actual =
-        convertToObservation(
+        fhirConverter.convertToObservation(
             Set.of(covidResult, fluResult),
-            List.of(covidDiseaseTestPerformedCode, fluDiseaseTestPerformedCode),
+            device,
             TestCorrectionStatus.ORIGINAL,
-            null);
+            null,
+            Date.from(Instant.parse("2023-06-10T23:15:00.00Z")));
 
     assertThat(actual).hasSize(2);
     String covidSerialized =
@@ -785,8 +838,8 @@ class FhirConverterTest {
             Objects.requireNonNull(
                 getClass().getClassLoader().getResourceAsStream("fhir/observationFlu.json")),
             StandardCharsets.UTF_8);
-    JSONAssert.assertEquals(covidSerialized, expectedSerialized1, true);
-    JSONAssert.assertEquals(fluSerialized, expectedSerialized2, true);
+    JSONAssert.assertEquals(expectedSerialized1, covidSerialized, true);
+    JSONAssert.assertEquals(expectedSerialized2, fluSerialized, true);
   }
 
   @Test
@@ -794,19 +847,23 @@ class FhirConverterTest {
     var covidDisease = new SupportedDisease("COVID-19", "96741-4");
     var id = "3c9c7370-e2e3-49ad-bb7a-f6005f41cf29";
     var testOrder = TestDataBuilder.createTestOrderWithDevice();
-    var result = new Result(testOrder, covidDisease, TestResult.NEGATIVE);
+    var result = TestDataBuilder.createTestResult(testOrder, covidDisease, TestResult.NEGATIVE);
+    var device = DeviceType.builder().build();
     var covidDiseaseTestPerformedCode =
         new DeviceTypeDisease(
             null, covidDisease, "94500-6", "covidEquipmentUID", "covidTestkitNameId", "94500-0");
 
     ReflectionTestUtils.setField(result, "internalId", UUID.fromString(id));
+    ReflectionTestUtils.setField(
+        device, "supportedDiseaseTestPerformed", List.of(covidDiseaseTestPerformedCode));
 
     var actual =
-        convertToObservation(
+        fhirConverter.convertToObservation(
             Set.of(result),
-            List.of(covidDiseaseTestPerformedCode),
+            device,
             TestCorrectionStatus.CORRECTED,
-            "woops");
+            "woops",
+            Date.from(Instant.parse("2023-06-10T23:15:00.00Z")));
 
     String actualSerialized = parser.encodeResourceToString(actual.get(0));
     var expectedSerialized1 =
@@ -822,7 +879,7 @@ class FhirConverterTest {
     var answers = new AskOnEntrySurvey(null, Map.of("fake", false), true, null);
     String testId = "fakeId";
 
-    var actual = convertToAOEObservations(testId, answers);
+    var actual = fhirConverter.convertToAOEObservations(testId, answers);
 
     String actualSerialized =
         actual.stream().map(parser::encodeResourceToString).collect(Collectors.toSet()).toString();
@@ -839,7 +896,7 @@ class FhirConverterTest {
     var answers = new AskOnEntrySurvey(null, Map.of("fake", true), false, LocalDate.of(2023, 3, 4));
     String testId = "fakeId";
 
-    var actual = convertToAOEObservations(testId, answers);
+    var actual = fhirConverter.convertToAOEObservations(testId, answers);
 
     String actualSerialized =
         actual.stream().map(parser::encodeResourceToString).collect(Collectors.toSet()).toString();
@@ -858,7 +915,7 @@ class FhirConverterTest {
     var answers = new AskOnEntrySurvey(null, Map.of("fake", false), false, null);
     String testId = "fakeId";
 
-    var actual = convertToAOEObservations(testId, answers);
+    var actual = fhirConverter.convertToAOEObservations(testId, answers);
 
     String actualSerialized =
         actual.stream().map(parser::encodeResourceToString).collect(Collectors.toSet()).toString();
@@ -875,7 +932,9 @@ class FhirConverterTest {
   @Test
   void convertToDiagnosticReport_TestEvent_valid() {
     var testEvent = TestDataBuilder.createEmptyTestEventWithValidDevice();
-    var actual = convertToDiagnosticReport(testEvent);
+    ReflectionTestUtils.setField(
+        testEvent, "deviceType", TestDataBuilder.createDeviceTypeForMultiplex());
+    var actual = fhirConverter.convertToDiagnosticReport(testEvent, new Date());
 
     assertThat(actual.getStatus()).isEqualTo(DiagnosticReportStatus.FINAL);
     assertThat(actual.getCode().getCoding()).hasSize(1);
@@ -887,10 +946,9 @@ class FhirConverterTest {
   void convertToDiagnosticReport_TestEvent_correctedTestEvent() {
     var invalidTestEvent = TestDataBuilder.createEmptyTestEvent();
     var correctedTestEvent =
-        new TestEvent(
-            invalidTestEvent, TestCorrectionStatus.CORRECTED, "typo", Collections.emptySet());
+        new TestEvent(invalidTestEvent, TestCorrectionStatus.CORRECTED, "typo");
 
-    var actual = convertToDiagnosticReport(correctedTestEvent);
+    var actual = fhirConverter.convertToDiagnosticReport(correctedTestEvent, new Date());
 
     assertThat(actual.getStatus()).isEqualTo(DiagnosticReportStatus.CORRECTED);
   }
@@ -899,10 +957,9 @@ class FhirConverterTest {
   void convertToDiagnosticReport_TestEvent_removedTestEvent() {
     var invalidTestEvent = TestDataBuilder.createEmptyTestEvent();
     var correctedTestEvent =
-        new TestEvent(
-            invalidTestEvent, TestCorrectionStatus.REMOVED, "wrong person", Collections.emptySet());
+        new TestEvent(invalidTestEvent, TestCorrectionStatus.REMOVED, "wrong person");
 
-    var actual = convertToDiagnosticReport(correctedTestEvent);
+    var actual = fhirConverter.convertToDiagnosticReport(correctedTestEvent, new Date());
 
     assertThat(actual.getStatus()).isEqualTo(DiagnosticReportStatus.ENTEREDINERROR);
   }
@@ -914,8 +971,10 @@ class FhirConverterTest {
     var date = new Date();
     ReflectionTestUtils.setField(testEvent, "internalId", UUID.fromString(internalId));
     ReflectionTestUtils.setField(testEvent, "createdAt", date);
+    ReflectionTestUtils.setField(
+        testEvent, "deviceType", TestDataBuilder.createDeviceTypeForMultiplex());
 
-    var actual = convertToDiagnosticReport(testEvent);
+    var actual = fhirConverter.convertToDiagnosticReport(testEvent, date);
 
     String actualSerialized = parser.encodeResourceToString(actual);
     var expectedSerialized =
@@ -925,7 +984,10 @@ class FhirConverterTest {
             StandardCharsets.UTF_8);
     expectedSerialized =
         expectedSerialized.replace(
-            "$EFFECTIVE_DATE_TIME_TESTED", new DateTimeType(date).getValueAsString());
+            "$CURRENT_DATE_TIMEZONE",
+            new DateTimeType(
+                    date, TemporalPrecisionEnum.SECOND, TimeZone.getTimeZone(ZoneOffset.UTC))
+                .getValueAsString());
 
     JSONAssert.assertEquals(expectedSerialized, actualSerialized, true);
   }
@@ -933,8 +995,16 @@ class FhirConverterTest {
   @Test
   void convertToDiagnosticReport_Strings_valid() {
     var date = new Date();
+    var zonedDateTime = ZonedDateTime.ofInstant(date.toInstant(), DEFAULT_TIME_ZONE_ID);
+    var expectedDateTimeType =
+        (DateTimeType)
+            new DateTimeType(
+                Date.from(zonedDateTime.toInstant()),
+                TemporalPrecisionEnum.SECOND,
+                TimeZone.getTimeZone(DEFAULT_TIME_ZONE_ID));
     var actual =
-        convertToDiagnosticReport(DiagnosticReportStatus.FINAL, "95422-2", "id-123", date, date);
+        fhirConverter.convertToDiagnosticReport(
+            DiagnosticReportStatus.FINAL, "95422-2", "id-123", zonedDateTime, zonedDateTime);
 
     assertThat(actual.getId()).isEqualTo("id-123");
     assertThat(actual.getStatus()).isEqualTo(DiagnosticReportStatus.FINAL);
@@ -942,13 +1012,13 @@ class FhirConverterTest {
     assertThat(actual.getCode().getCodingFirstRep().getSystem()).isEqualTo("http://loinc.org");
     assertThat(actual.getCode().getCodingFirstRep().getCode()).isEqualTo("95422-2");
     assertThat(((DateTimeType) actual.getEffective()).getAsV3())
-        .isEqualTo(new DateTimeType(date).getAsV3());
-    assertThat((actual.getIssued())).isEqualTo(date);
+        .isEqualTo(expectedDateTimeType.getAsV3());
+    assertThat(actual.getIssued()).isEqualTo(date);
   }
 
   @Test
   void convertToDiagnosticReport_Strings_null() {
-    var actual = convertToDiagnosticReport(null, null, null, null, null);
+    var actual = fhirConverter.convertToDiagnosticReport(null, null, null, null, null);
 
     assertThat(actual.getId()).isNull();
     assertThat(actual.getStatus()).isNull();
@@ -958,13 +1028,49 @@ class FhirConverterTest {
   @Test
   void convertToServiceRequest_TestOrder_valid() {
     var testOrder = TestDataBuilder.createTestOrderWithMultiplexDevice();
-    var actual = convertToServiceRequest(testOrder);
+    var actual =
+        fhirConverter.convertToServiceRequest(
+            testOrder,
+            ZonedDateTime.ofInstant(
+                Instant.parse("2023-06-22T10:30:00.000Z"), DEFAULT_TIME_ZONE_ID));
 
     assertThat(actual.getStatus()).isEqualTo(ServiceRequestStatus.ACTIVE);
     assertThat(actual.getIntent()).isEqualTo(ServiceRequestIntent.ORDER);
     assertThat(actual.getCode().getCoding()).hasSize(1);
     assertThat(actual.getCode().getCodingFirstRep().getSystem()).isEqualTo("http://loinc.org");
     assertThat(actual.getCode().getCodingFirstRep().getCode()).isEqualTo("95422-2");
+    assertThat(actual.getExtension()).hasSize(2);
+    assertThat(
+            actual
+                .castToCodeableConcept(
+                    actual
+                        .getExtensionByUrl(
+                            "https://reportstream.cdc.gov/fhir/StructureDefinition/order-control")
+                        .getValue())
+                .getCoding()
+                .get(0)
+                .getCode())
+        .isEqualTo("RE");
+    assertThat(
+            actual
+                .castToCodeableConcept(
+                    actual
+                        .getExtensionByUrl(
+                            "https://reportstream.cdc.gov/fhir/StructureDefinition/order-control")
+                        .getValue())
+                .getCoding()
+                .get(0)
+                .getSystem())
+        .isEqualTo("http://terminology.hl7.org/CodeSystem/v2-0119");
+    assertThat(
+            actual
+                .castToDateTime(
+                    actual
+                        .getExtensionByUrl(
+                            "https://reportstream.cdc.gov/fhir/StructureDefinition/order-effective-date")
+                        .getValue())
+                .getValue())
+        .isEqualTo("2023-06-22T10:30:00.00Z");
   }
 
   @Test
@@ -973,7 +1079,8 @@ class FhirConverterTest {
         new TestOrder(
             TestDataBuilder.createEmptyPerson(true), TestDataBuilder.createEmptyFacility(true));
     testOrder.markComplete();
-    var actual = convertToServiceRequest(testOrder);
+    var actual =
+        fhirConverter.convertToServiceRequest(testOrder, ZonedDateTime.now(DEFAULT_TIME_ZONE_ID));
 
     assertThat(actual.getStatus()).isEqualTo(ServiceRequestStatus.COMPLETED);
   }
@@ -984,7 +1091,8 @@ class FhirConverterTest {
         new TestOrder(
             TestDataBuilder.createEmptyPerson(true), TestDataBuilder.createEmptyFacility(true));
     testOrder.cancelOrder();
-    var actual = convertToServiceRequest(testOrder);
+    var actual =
+        fhirConverter.convertToServiceRequest(testOrder, ZonedDateTime.now(DEFAULT_TIME_ZONE_ID));
 
     assertThat(actual.getStatus()).isEqualTo(ServiceRequestStatus.REVOKED);
   }
@@ -995,24 +1103,42 @@ class FhirConverterTest {
         new TestOrder(
             TestDataBuilder.createEmptyPerson(true), TestDataBuilder.createEmptyFacility(false));
     testOrder.cancelOrder();
-    var actual = convertToServiceRequest(testOrder);
+    var actual =
+        fhirConverter.convertToServiceRequest(testOrder, ZonedDateTime.now(DEFAULT_TIME_ZONE_ID));
 
     assertThat(actual.getCode().getCoding()).isEmpty();
   }
 
   @Test
   void convertToServiceRequest_Strings_valid() {
-    var actual = convertToServiceRequest(ServiceRequestStatus.COMPLETED, "94533-7", "id-123");
+    var actual =
+        fhirConverter.convertToServiceRequest(
+            ServiceRequestStatus.COMPLETED,
+            "94533-7",
+            "id-123",
+            ZonedDateTime.ofInstant(
+                Instant.parse("2023-06-22T10:35:00.000Z"), DEFAULT_TIME_ZONE_ID));
     assertThat(actual.getId()).isEqualTo("id-123");
     assertThat(actual.getStatus()).isEqualTo(ServiceRequestStatus.COMPLETED);
     assertThat(actual.getCode().getCoding()).hasSize(1);
     assertThat(actual.getCode().getCodingFirstRep().getSystem()).isEqualTo("http://loinc.org");
     assertThat(actual.getCode().getCodingFirstRep().getCode()).isEqualTo("94533-7");
+    assertThat(
+            actual
+                .castToDateTime(
+                    actual
+                        .getExtensionByUrl(
+                            "https://reportstream.cdc.gov/fhir/StructureDefinition/order-effective-date")
+                        .getValue())
+                .getValue())
+        .isEqualTo("2023-06-22T10:35:00.00Z");
   }
 
   @Test
   void convertToServiceRequest_Strings_null() {
-    var actual = convertToServiceRequest(null, null, null);
+    var actual =
+        fhirConverter.convertToServiceRequest(
+            null, null, null, ZonedDateTime.now(DEFAULT_TIME_ZONE_ID));
     assertThat(actual.getId()).isNull();
     assertThat(actual.getStatus()).isNull();
     assertThat(actual.getCode().getCoding()).isEmpty();
@@ -1025,7 +1151,11 @@ class FhirConverterTest {
     testOrder.markComplete();
     ReflectionTestUtils.setField(testOrder, "internalId", UUID.fromString(internalId));
 
-    var actual = convertToServiceRequest(testOrder);
+    var actual =
+        fhirConverter.convertToServiceRequest(
+            testOrder,
+            ZonedDateTime.ofInstant(
+                Instant.parse("2023-06-22T10:35:00.000Z"), DEFAULT_TIME_ZONE_ID));
 
     String actualSerialized = parser.encodeResourceToString(actual);
     var expectedSerialized =
@@ -1040,7 +1170,8 @@ class FhirConverterTest {
   @Test
   void createPractitionerRole_valid() {
     var practitionerRole =
-        createPractitionerRole("Organization/org-id", "Practitioner/practitioner-id");
+        fhirConverter.createPractitionerRole(
+            "Organization/org-id", "Practitioner/practitioner-id", UUID.randomUUID());
 
     assertThat(practitionerRole.getOrganization().getReference()).isEqualTo("Organization/org-id");
     assertThat(practitionerRole.getPractitioner().getReference())
@@ -1050,8 +1181,13 @@ class FhirConverterTest {
   @Test
   void createMessageHeader_valid() {
     var messageHeader =
-        createMessageHeader(
-            "Organization/org-id", "mainResource", "provenance", gitProperties, "P");
+        fhirConverter.createMessageHeader(
+            "Organization/org-id",
+            "mainResource",
+            "provenance",
+            gitProperties,
+            "P",
+            UUID.randomUUID());
 
     assertThat(messageHeader.getEventCoding().getSystem())
         .isEqualTo("http://terminology.hl7.org/CodeSystem/v2-0003");
@@ -1101,7 +1237,7 @@ class FhirConverterTest {
   @Test
   void createProvenance_valid() {
     var date = new Date();
-    var provenance = createProvenance("Organization/org-id", date);
+    var provenance = fhirConverter.createProvenance("Organization/org-id", date, UUID.randomUUID());
 
     assertThat(provenance.getActivity().getCoding()).hasSize(1);
     assertThat(provenance.getActivity().getCodingFirstRep().getCode()).isEqualTo("R01");
@@ -1139,19 +1275,22 @@ class FhirConverterTest {
     diagnosticReport.setId(UUID.randomUUID().toString());
 
     var actual =
-        createFhirBundle(
-            patient,
-            organization,
-            practitioner,
-            device,
-            specimen,
-            List.of(observation),
-            Set.of(aoeobservation1, aoeobservation2),
-            serviceRequest,
-            diagnosticReport,
-            date,
-            gitProperties,
-            "P");
+        fhirConverter.createFhirBundle(
+            CreateFhirBundleProps.builder()
+                .patient(patient)
+                .testingLab(organization)
+                .orderingFacility(null)
+                .practitioner(practitioner)
+                .device(device)
+                .specimen(specimen)
+                .resultObservations(List.of(observation))
+                .aoeObservations(Set.of(aoeobservation1, aoeobservation2))
+                .serviceRequest(serviceRequest)
+                .diagnosticReport(diagnosticReport)
+                .currentDate(date)
+                .gitProperties(gitProperties)
+                .processingId("P")
+                .build());
 
     var resourceUrls =
         actual.getEntry().stream()
@@ -1254,8 +1393,7 @@ class FhirConverterTest {
                 .getSupportingInfo().stream()
                     .allMatch(r -> r.getReference().contains("Observation/")))
         .isTrue();
-    assertThat(((ServiceRequest) serviceRequestEntry.getResource()).getSupportingInfo().size())
-        .isEqualTo(2);
+    assertThat(((ServiceRequest) serviceRequestEntry.getResource()).getSupportingInfo()).hasSize(2);
 
     var diagnosticReportEntry =
         actual.getEntry().stream()
@@ -1296,25 +1434,27 @@ class FhirConverterTest {
     supportedTestOrders.add(TestDataBuilder.createDeviceTypeDisease(fluADisease));
     supportedTestOrders.add(TestDataBuilder.createDeviceTypeDisease(fluBDisease));
     var deviceType =
-        new DeviceType(
-            "name", "manufacturer", "model", "loinc", 0, new ArrayList<>(), supportedTestOrders);
+        new DeviceType("name", "manufacturer", "model", 0, new ArrayList<>(), supportedTestOrders);
 
     var specimenType = new SpecimenType("name", "typeCode");
     var provider =
         new Provider(new PersonName("Michaela", null, "Quinn", ""), "1", address, "7735551235");
     var organization = new Organization("District", "school", "1", true);
+
     var facility =
         new Facility(
-            organization,
-            "School",
-            "123D456789",
-            address,
-            "7735551234",
-            "school@example.com",
-            provider,
-            deviceType,
-            specimenType,
-            Collections.emptyList());
+            FacilityBuilder.builder()
+                .org(organization)
+                .facilityName("School")
+                .cliaNumber("123D456789")
+                .facilityAddress(address)
+                .phone("7735551234")
+                .email("school@example.com")
+                .orderingProvider(provider)
+                .defaultDeviceType(deviceType)
+                .defaultSpecimenType(specimenType)
+                .configuredDevices(Collections.emptyList())
+                .build());
     var person =
         new Person(
             organization,
@@ -1341,10 +1481,14 @@ class FhirConverterTest {
         new PatientAnswers(new AskOnEntrySurvey(null, Map.of("fake", false), false, null));
     testOrder.setAskOnEntrySurvey(answers);
 
-    var covidResult = new Result(testOrder, covidDisease, TestResult.POSITIVE);
-    var fluAResult = new Result(testOrder, fluADisease, TestResult.NEGATIVE);
-    var fluBResult = new Result(testOrder, fluBDisease, TestResult.UNDETERMINED);
-    var testEvent = new TestEvent(testOrder, false, Set.of(covidResult, fluAResult, fluBResult));
+    var covidResult =
+        TestDataBuilder.createTestResult(testOrder, covidDisease, TestResult.POSITIVE);
+    var fluAResult = TestDataBuilder.createTestResult(testOrder, fluADisease, TestResult.NEGATIVE);
+    var fluBResult =
+        TestDataBuilder.createTestResult(testOrder, fluBDisease, TestResult.UNDETERMINED);
+
+    var testEvent = new TestEvent(testOrder, false);
+    testEvent.getResults().addAll(List.of(covidResult, fluAResult, fluBResult));
 
     var providerId = UUID.fromString("ffc07f31-f2af-4728-a247-8cb3aa05ccd0");
     var facilityId = UUID.fromString("1c3d14b9-e222-4a16-9fb2-d9f173034a6a");
@@ -1370,7 +1514,6 @@ class FhirConverterTest {
                 "testkitNameId3",
                 "95422-2"));
     var date = new Date();
-    var dateTested = new Date();
     ReflectionTestUtils.setField(provider, "internalId", providerId);
     ReflectionTestUtils.setField(facility, "internalId", facilityId);
     ReflectionTestUtils.setField(person, "internalId", personId);
@@ -1383,11 +1526,11 @@ class FhirConverterTest {
     ReflectionTestUtils.setField(fluBResult, "internalId", fluBResultId);
     ReflectionTestUtils.setField(testOrder, "internalId", testOrderId);
     ReflectionTestUtils.setField(testEvent, "internalId", testEventId);
-    ReflectionTestUtils.setField(testEvent, "createdAt", dateTested);
+    ReflectionTestUtils.setField(testEvent, "createdAt", date);
     ReflectionTestUtils.setField(
         person, "phoneNumbers", List.of(new PhoneNumber(PhoneType.LANDLINE, "7735551234")));
 
-    var actual = createFhirBundle(testEvent, gitProperties, date, "P");
+    var actual = fhirConverter.createFhirBundle(testEvent, gitProperties, date, "P");
 
     String actualSerialized = parser.encodeResourceToString(actual);
 
@@ -1405,22 +1548,30 @@ class FhirConverterTest {
                 getClass().getClassLoader().getResourceAsStream("fhir/bundle.json")),
             StandardCharsets.UTF_8);
 
+    var expectedCurrentDateTimezone =
+        new DateTimeType(date, TemporalPrecisionEnum.SECOND, TimeZone.getTimeZone("UTC"))
+            .getValueAsString();
+    var expectedCurrentDateZulu = new InstantType(date).setTimeZoneZulu(true).getValueAsString();
+
     expectedSerialized = expectedSerialized.replace("$MESSAGE_HEADER_ID", messageHeaderId);
     expectedSerialized = expectedSerialized.replace("$PRACTITIONER_ROLE_ID", practitionerRoleId);
     expectedSerialized = expectedSerialized.replace("$PROVENANCE_ID", provenanceId);
     expectedSerialized =
-        expectedSerialized.replace(
-            "$EFFECTIVE_DATE_TIME_TESTED", new DateTimeType(dateTested).getValueAsString());
+        expectedSerialized.replace("$CURRENT_DATE_TIMEZONE", expectedCurrentDateTimezone);
+    expectedSerialized = expectedSerialized.replace("$CURRENT_DATE_ZULU", expectedCurrentDateZulu);
     expectedSerialized =
         expectedSerialized.replace(
-            "$PROVENANCE_RECORDED_DATE",
-            OffsetDateTime.ofInstant(date.toInstant(), ZoneId.systemDefault())
-                .format(DateTimeFormatter.ofPattern("uuuu-MM-dd'T'HH:mm:ss.SSSxxx")));
-    expectedSerialized =
-        expectedSerialized.replace(
-            "$BUNDLE_TIMESTAMP",
-            OffsetDateTime.ofInstant(date.toInstant(), ZoneId.systemDefault())
-                .format(DateTimeFormatter.ofPattern("uuuu-MM-dd'T'HH:mm:ss.SSSxxx")));
+            "$SPECIMEN_IDENTIFIER",
+            ((Specimen)
+                    actual.getEntry().stream()
+                        .filter(
+                            entry -> entry.getFullUrl().contains(ResourceType.Specimen.toString()))
+                        .findFirst()
+                        .get()
+                        .getResource())
+                .getIdentifierFirstRep()
+                .getValue());
+
     JSONAssert.assertEquals(expectedSerialized, actualSerialized, JSONCompareMode.NON_EXTENSIBLE);
   }
 }
